# xstream

./: CMakeLists.txt  README.md  displaymanager.cpp  displaymanager.h  logger.cpp  logger.h  videostream.cpp  videostream.h  xstreamplugin.cpp  xstreamplugin.h
data/: ff_b772.yaml  toliss_a321.yaml
test/: test.cpp
